[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-proxypy"
version = "0.0.11"
authors = [
    {name = "shlll", email = "shlll7347@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
description = "llm proxy server"
dependencies = [
    "pyjwt",
    "pyyaml",
    "uvicorn",
    "gunicorn",
    "tiktoken",
    "shutilspy @ https://v6.gh-proxy.com/https://github.com/shlllshlll/shutilspy/releases/download/v0.0.11/shutilspy-0.0.11-py3-none-any.whl",
    "pydantic-settings>=2.0.3",
]

[project.optional-dependencies]
requests = ["requests"]
httpx = ["httpx"]
aiohttp = ["aiohttp"]
fastapi = ["fastapi"]

[tool.setuptools]
packages = ["llm_proxy", "llm_proxy.param", "llm_proxy.provider", "llm_proxy.servicer"]
